// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-console console.error toHaveErrored works when not called 1`] = `
"expect(jest.fn()).toHaveErrored(expected)

Expected mock function to be called."
`;

exports[`jest-console console.error toHaveErroredWith works when not called 1`] = `
"expect(jest.fn()).toHaveErroredWith(expected)

Expected mock function to be called with:
["This is error!"]
but it was called with:
"
`;

exports[`jest-console console.error toHaveErroredWith works with many arguments that do not match 1`] = `
"expect(jest.fn()).toHaveErroredWith(expected)

Expected mock function to be called with:
["This is error!"]
but it was called with:
["Unknown message."],["This is error!", "Unknown param."]"
`;

exports[`jest-console console.info toHaveInformed works when not called 1`] = `
"expect(jest.fn()).toHaveInformed(expected)

Expected mock function to be called."
`;

exports[`jest-console console.info toHaveInformedWith works when not called 1`] = `
"expect(jest.fn()).toHaveInformedWith(expected)

Expected mock function to be called with:
["This is info!"]
but it was called with:
"
`;

exports[`jest-console console.info toHaveInformedWith works with many arguments that do not match 1`] = `
"expect(jest.fn()).toHaveInformedWith(expected)

Expected mock function to be called with:
["This is info!"]
but it was called with:
["Unknown message."],["This is info!", "Unknown param."]"
`;

exports[`jest-console console.log toHaveLogged works when not called 1`] = `
"expect(jest.fn()).toHaveLogged(expected)

Expected mock function to be called."
`;

exports[`jest-console console.log toHaveLoggedWith works when not called 1`] = `
"expect(jest.fn()).toHaveLoggedWith(expected)

Expected mock function to be called with:
["This is log!"]
but it was called with:
"
`;

exports[`jest-console console.log toHaveLoggedWith works with many arguments that do not match 1`] = `
"expect(jest.fn()).toHaveLoggedWith(expected)

Expected mock function to be called with:
["This is log!"]
but it was called with:
["Unknown message."],["This is log!", "Unknown param."]"
`;

exports[`jest-console console.warn toHaveWarned works when not called 1`] = `
"expect(jest.fn()).toHaveWarned(expected)

Expected mock function to be called."
`;

exports[`jest-console console.warn toHaveWarnedWith works when not called 1`] = `
"expect(jest.fn()).toHaveWarnedWith(expected)

Expected mock function to be called with:
["This is warn!"]
but it was called with:
"
`;

exports[`jest-console console.warn toHaveWarnedWith works with many arguments that do not match 1`] = `
"expect(jest.fn()).toHaveWarnedWith(expected)

Expected mock function to be called with:
["This is warn!"]
but it was called with:
["Unknown message."],["This is warn!", "Unknown param."]"
`;
